# pleurotus

./: config.py  config.yaml  controller.py  controller_types.py  metrics.py  prometheus.yaml  pyproject.toml  scd41.py  sensor.py  tempcontrol.py  types.py
screen/: font.py  greenhouse_hud.py  screen.py  screen_types.py  shapes.py
