[tool.poetry]
name = "pleurotus"
version = "0.1.0"
description = ""
authors = ["Shay Pletcher <4468322+ThePletch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Adafruit-Blinka = "^8.19.0"
adafruit-circuitpython-scd4x = "^1.3.9"
rpi-gpio = "^0.7.1"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
types-circuitpython = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
