[tool.poetry]
name = "pleurotus"
version = "0.1.0"
description = ""
authors = ["Shay Pletcher <4468322+ThePletch@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Adafruit-Blinka = "^8.19.0"
adafruit-circuitpython-scd4x = "^1.3.9"
rpi-gpio = [
  { version = "^0.7.1", platform = "linux" },
]
fake-rpi = [
  { git = "https://github.com/sn4k3/FakeRPi", rev = "0f30d32", platform = "darwin" },
]
prometheus-client = "^0.17.1"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
types-circuitpython = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
